objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Motivo_rechazo__c</fullName>
        <label>Motivo rechazo comité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No se ajusta a las condiciones de comportamiento</fullName>
                </value>
                <value>
                    <fullName>Cliente no interesado</fullName>
                </value>
                <value>
                    <fullName>Cliente no aceptó la propuesta</fullName>
                </value>
                <value>
                    <fullName>El cliente no está interesado en el producto</fullName>
                </value>
                <value>
                    <fullName>Rechazado en Comité</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>No aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivos_cierre_no_exitoso__c</fullName>
        <label>Motivos cierre no exitoso</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>N_mero_del_cr_dito__c</fullName>
        <label>Número del crédito</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_Productos__c</fullName>
        <label>Número de Productos</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operaciones__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operaciones</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Operaciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oportunidad_girada__c</fullName>
        <label>Oportunidad girada</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origen_referido__c</fullName>
        <label>Origen referido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inteligencia de Negocio </fullName>
                </value>
                <value>
                    <fullName>Banca Privada </fullName>
                </value>
                <value>
                    <fullName>Corporaciones </fullName>
                </value>
                <value>
                    <fullName>Empresas </fullName>
                </value>
                <value>
                    <fullName>Sucursales </fullName>
                </value>
                <value>
                    <fullName>Banca Persona </fullName>
                </value>
                <value>
                    <fullName>BICE Inversiones </fullName>
                </value>
                <value>
                    <fullName>Ejecutivos AP </fullName>
                </value>
                <value>
                    <fullName>Referidos Clientes </fullName>
                </value>
                <value>
                    <fullName>Asesor (Asesor, contador, Family Office u otro tercero) </fullName>
                </value>
                <value>
                    <fullName>Licitaciones</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Otro_motivo__c</fullName>
        <label>Descripción otro motivo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Otro_motivo_rechazo__c</fullName>
        <label>Otro motivo rechazo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plazo__c</fullName>
        <label>Plazo (meses)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentar_Soluci_n_financiera__c</fullName>
        <defaultValue>false</defaultValue>
        <description>W-000016</description>
        <label>Presentar Solución financiera</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Productos_bancarios__c</fullName>
        <label>Productos bancarios</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash management</fullName>
                </value>
                <value>
                    <fullName>COMEX</fullName>
                </value>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Cuenta corriente</fullName>
                </value>
                <value>
                    <fullName>Cursar inversiones</fullName>
                </value>
                <value>
                    <fullName>Factoring</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Mesa de dinero</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profin_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo Comercial</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requiere_enrolamiento__c</fullName>
        <description>Campo para distinguir si el posible cliente requiere enrolamiento.</description>
        <label>¿Requiere enrolamiento?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resultado_Comite__c</fullName>
        <label>Resultado Comité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>En_proceso_de_comite</fullName>
                    <color>#F3D904</color>
                    <label>En proceso de comité</label>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                    <color>#33CC00</color>
                    <label>Aprobado</label>
                </value>
                <value>
                    <fullName>Condicionado</fullName>
                    <color>#CC9933</color>
                    <label>Condicionado</label>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                    <color>#CC0000</color>
                    <label>Rechazado</label>
                </value>
                <value>
                    <fullName>No aplica</fullName>
                    <color>#6633FF</color>
                    <label>No aplica</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resultado_del_contacto__c</fullName>
        <label>Resultado del contacto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contactado</fullName>
                </value>
                <value>
                    <fullName>No contactado</fullName>
                </value>
                <value>
                    <fullName>No responde</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_report_recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Informe de riesgo recibido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segmento_referido__c</fullName>
        <label>Segmento referido</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No es Cliente</fullName>
                </value>
                <value>
                    <fullName>Cliente Banco </fullName>
                </value>
                <value>
                    <fullName>Cliente Inversiones</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solicitude_de_Producto_y_Servicios__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solicitude de Producto y Servicios</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spread__c</fullName>
        <label>Spread (% anual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subetapa__c</fullName>
        <label>Subetapa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crear equipo</fullName>
                </value>
                <value>
                    <fullName>Presentar propuesta</fullName>
                </value>
                <value>
                    <fullName>Propuesta presentada</fullName>
                </value>
                <value>
                    <fullName>Enrolar</fullName>
                </value>
                <value>
                    <fullName>Crear KYC</fullName>
                </value>
                <value>
                    <fullName>Comité de crédito</fullName>
                </value>
                <value>
                    <fullName>Apertura productos</fullName>
                </value>
                <value>
                    <fullName>Welcome pack disponible</fullName>
                </value>
                <value>
                    <fullName>Welcome pack entregado</fullName>
                </value>
                <value>
                    <fullName>Productos activados</fullName>
                </value>
                <value>
                    <fullName>Gestionar crédito</fullName>
                </value>
                <value>
                    <fullName>Gestionar inversion</fullName>
                    <label>Gestionar inversión</label>
                </value>
                <value>
                    <fullName>Inversión realizada</fullName>
                </value>
                <value>
                    <fullName>Verificar cliente banco</fullName>
                </value>
                <value>
                    <fullName>Crear propuesta</fullName>
                </value>
                <value>
                    <fullName>Gestionar prenda y GPI</fullName>
                </value>
                <value>
                    <fullName>Aperturar línea de crédito BIA</fullName>
                </value>
                <value>
                    <fullName>Contacto cliente</fullName>
                </value>
                <value>
                    <fullName>Aprobación cliente</fullName>
                </value>
                <value>
                    <fullName>Gestión pendiente</fullName>
                </value>
                <value>
                    <fullName>Validación cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tareas_de_Otorgamiento_completadas__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Debe completar las tareas para poder avanzar a la siguiente etapa.</inlineHelpText>
        <label>Tareas de &quot;Otorgamiento&quot; completadas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_BIA__c</fullName>
        <label>Tipo de cuenta BIA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nacional (CLP)</fullName>
                </value>
                <value>
                    <fullName>Internacional (USD)</fullName>
                </value>
                <value>
                    <fullName>Ambos</fullName>
                </value>
                <value>
                    <fullName>Internacional</fullName>
                    <isActive>false</isActive>
                    <label>Internacional</label>
                </value>
                <value>
                    <fullName>Nacional</fullName>
                    <isActive>false</isActive>
                    <label>Nacional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>actividades_comite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Debe completar las actividades antes de pasar a la etapa de &quot;Otorgamiento&quot;</inlineHelpText>
        <label>Actividades comité MAC completadas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alerta_al_subgerente_agente_comercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subgerente/agente comercial</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Op_Us_Subgerente</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>completar_y_firmar_Formulario_EESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completar y firmar Formulario EESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>motivo_rechazo_opp__c</fullName>
        <label>Motivo rechazo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comportamiento comercial</fullName>
                </value>
                <value>
                    <fullName>No se pudo contactar</fullName>
                </value>
                <value>
                    <fullName>Cifra</fullName>
                </value>
                <value>
                    <fullName>Riesgo</fullName>
                </value>
                <value>
                    <fullName>Cliente no quiso/sin interés</fullName>
                </value>
                <value>
                    <fullName>No es perfil banco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Oportunidades que cierran este mes</label>
        <language>es</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Assistant_Private_Banking_Division_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Account_Executive_Antofagasta</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Account_Executive_Apoquindo</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Account_Executive_El_Cortijo</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Account_Executive_Empresas_A</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Account_Executive_Empresas_B</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Account_Executive_Providencia</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Account_Executive_Rancagua</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Account_Executive_Talca</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Account_Executive_Vicu_a_Mackenna</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Agente_Antofagasta</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Agente_Apoquindo</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Agente_El_Cortijo</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Agente_Empresas_A</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Agente_Empresas_B</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Agente_Providencia</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Agente_Rancagua</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Agente_Talca</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Agente_Vicu_a_Mackenna</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Agro_Industria_y_Alimentos_Account_Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Agro_Industria_y_Alimentos_Gerencia</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Agro_Industria_y_Alimentos_Subgerencia_1</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Agro_Industria_y_Alimentos_Subgerencia_2</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Gerencia_Empresas_y_Sucursales</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Jefe_Plataforma_Antofagasta</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Jefe_Plataforma_Apoquindo</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Jefe_Plataforma_El_Cortijo</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Jefe_Plataforma_Empresas_A</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Jefe_Plataforma_Empresas_B</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Jefe_Plataforma_Providencia</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Jefe_Plataforma_Vicu_a_Mackenna</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Leasing_A_Account_Executive</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Leasing_A_Jefe_Plataforma</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Leasing_A_Subgerencia</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Leasing_B_Account_Executive</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Leasing_B_Jefe_Plataforma</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Leasing_B_Subgerencia</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Leasing_Gerencia</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Account_Executive_Concepcion</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Account_Executive_Los_ngeles</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Account_Executive_Osorno</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Account_Executive_Puerto_Montt</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Account_Executive_Temuco</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Agente_Concepcion</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Agente_Los_Angeles</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Agente_Osorno</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Agente_Puerto_Montt</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Agente_Temuco</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Gerencia</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Jefe_Plataforma_Concepcion</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Jefe_Plataforma_Los_ngeles</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Jefe_Plataforma_Osorno</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Jefe_Plataforma_Puerto_Montt</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Banca_Empresas_Zonal_Sur_Jefe_Plataforma_Temuco</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Asistant_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Supervisor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Division_Banca_Empresas_y_Corporaciones</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Division_Inversiones</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Retail_Banking_Assistant_Division_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Retail_Banking_Regional_Manager_Zona_3</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Oportunidades_Comex</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Ejecutivo_especialista_asignado__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ejecutivo_especialista_asignado__c</field>
            <operation>contains</operation>
            <value>comex</value>
        </filters>
        <label>Oportunidades Comex</label>
        <language>es</language>
        <sharedTo>
            <role>Corporate_Banking_Executives</role>
            <roleAndSubordinatesInternal>Corporate_Asistant_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Supervisor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Division_Banca_Empresas_y_Corporaciones</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Oportunidades_Cr_dito</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Ejecutivo_especialista_asignado__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ejecutivo_especialista_asignado__c</field>
            <operation>contains</operation>
            <value>crédito</value>
        </filters>
        <label>Oportunidades Crédito</label>
        <language>es</language>
        <sharedTo>
            <role>Corporate_Banking_Executives</role>
            <roleAndSubordinatesInternal>Corporate_Asistant_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Supervisor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Division_Banca_Empresas_y_Corporaciones</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Oportunidades_Factoring</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Ejecutivo_especialista_asignado__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ejecutivo_especialista_asignado__c</field>
            <operation>contains</operation>
            <value>factoring</value>
        </filters>
        <label>Oportunidades Factoring</label>
        <language>es</language>
        <sharedTo>
            <role>Corporate_Banking_Executives</role>
            <roleAndSubordinatesInternal>Corporate_Asistant_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Supervisor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Division_Banca_Empresas_y_Corporaciones</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Oportunidades_Leasing</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Ejecutivo_especialista_asignado__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ejecutivo_especialista_asignado__c</field>
            <operation>contains</operation>
            <value>leasing</value>
        </filters>
        <label>Oportunidades Leasing</label>
        <language>es</language>
        <sharedTo>
            <role>Corporate_Banking_Executives</role>
            <roleAndSubordinatesInternal>Corporate_Asistant_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Supervisor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Division_Banca_Empresas_y_Corporaciones</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Oportunidades_Mesa_de_Dinero</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Ejecutivo_especialista_asignado__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ejecutivo_especialista_asignado__c</field>
            <operation>contains</operation>
            <value>mesa</value>
        </filters>
        <label>Oportunidades Mesa de Dinero</label>
        <language>es</language>
        <sharedTo>
            <role>Corporate_Banking_Executives</role>
            <roleAndSubordinatesInternal>Corporate_Asistant_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Supervisor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Division_Banca_Empresas_y_Corporaciones</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Oportunidades_Referidas_por_Mi</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FuiElCreadorDeLaOportunidad__c</field>
            <operation>equals</operation>
            <value>VERDADERO</value>
        </filters>
        <filters>
            <field>MeAsignaronOportunidad__c</field>
            <operation>equals</operation>
            <value>FALSO</value>
        </filters>
        <label>Oportunidades Referidas por Mi</label>
        <language>es</language>
        <sharedTo>
            <roleAndSubordinates>Assistant_Private_Banking_Division_Manager</roleAndSubordinates>
            <roleAndSubordinatesInternal>Corporate_Asistant_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Supervisor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Division_Banca_Empresas_y_Corporaciones</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Division_Inversiones</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Retail_Banking_Assistant_Division_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Retail_Banking_Regional_Manager_Zona_3</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Oportunidades_con_Ej_Especialistas</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Ejecutivo_especialista_asignado__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ejecutivo_especialista_asignado__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <label>Oportunidades con Ej Especialistas</label>
        <language>es</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Corporate_Asistant_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Corporate_Banking_Supervisor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Division_Banca_Empresas_y_Corporaciones</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
</CustomObject>